--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Mingalaba</h1>
+      <h1>Welcome?</h1>
       <a
         target="_blank"
         href="/rss.xml"
@@ -41,16 +41,14 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+       Hello there , I'm Aaryan aka whiteye. 17 y/o going to university very soon . I like hiking , solving problems and volleyball . I enjoy web development and solving Leetcode sometimes .
+Currently i am going to gym , solving leetcode problems in JAVA , and also grinding Web Developnent .
       </p>
       <p>
         Read the blog posts or check
         <LinkButton
           className="hover:text-skin-accent underline underline-offset-4 decoration-dashed"
-          href="https://github.com/satnaing/astro-paper#readme"
+          href="https://github.com/asdfghjA1"
         >
           README
         </LinkButton> for more info.
