--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -75,3 +75,14 @@ const next = pageNum < totalPages ? "" : "disabled";
     @apply group-hover:!fill-skin-base;
   }
 </style>
+
+<script>
+
+import {loglib} from "@loglib/tracker"
+
+loglib.record({
+    id: "whiteye",
+    host: "https://www.loglib.io",
+})
+    
+</script>
