take 2 of adding loglib website tracker

--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -6,6 +6,13 @@ export interface Props {
   pageDesc?: string;
 }
 
+import {loglib} from "@loglib/tracker"
+
+loglib.record({
+    id: "whiteye",
+    host: "https://www.loglib.io",
+})
+    
 const { pageTitle, pageDesc } = Astro.props;
 ---
 
