--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,13 @@ import getSortedPosts from "@utils/getSortedPosts";
 import slugify from "@utils/slugify";
 import { SOCIALS } from "@config";
 
+import {loglib} from "@loglib/tracker"
+
+loglib.record({
+    id: "whiteye",
+    host: "https://www.loglib.io",
+})
+    
 const posts = await getCollection("blog");
 
 const sortedPosts = getSortedPosts(posts);
