--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -75,6 +75,19 @@ const socialImageURL = new URL(
       )
     }
 
+<!-- Google tag (gtag.js) -->
+<script 
+type="text/partytown"
+async src="https://www.googletagmanager.com/gtag/js?id=G-K2QCFDSD1K"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K2QCFDSD1K');
+</script> 
+
+
     <script is:inline src="/toggle-theme.js"></script>
   </head>
   <body>
