--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -211,3 +211,12 @@ const { activeNav } = Astro.props;
     menuItems?.classList.toggle("display-none");
   });
 </script>
+<!-- <script>
+  import {loglib} from "@loglib/tracker"
+
+loglib.record({
+    id: "whiteye",
+    host: "https://www.loglib.io",
+})
+    
+</script> -->
