--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -107,7 +107,7 @@ import { Image } from "astro:assets";
               )}
               {isBackgroundImage && (
                 <p class="absolute bottom-2 right-2 font-mono text-sm text-skin-muted">
-                  Click blank to enlarge
+                  {/* Click blank to enlarge */}
                 </p>
               )}
             </div>
